--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.1",
     "firebase": "^12.2.1",
+    "lucide-react": "^0.544.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
