Repository Parsing and UI changes

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,8 @@ sentence-transformers
 faiss-cpu 
 tree-sitter 
 pygments
+GitPython
+tree-sitter 
+tree-sitter-python 
+tree-sitter-javascript
+tree-sitter-languages
