--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
