--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,15 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.12.1",
     "firebase": "^12.2.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
-    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "tailwindcss": "^3.4.17"
   }
 }
